postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
spec:
  type: ClusterIP
  selector:
    app: postrgresql
  ports:
    - port: 5432
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 5432
