webapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi-entry
spec:
  type: ClusterIP
  selector:
    app: webapi
  ports:
    - port: 81
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 8000
