webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-webapp
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 8000
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 5000
